test/errors/arrays/new_bounds_jagged_mismatch_error.hy
// Jagged arrays allocate one dimension at a time.
int main()
{
    int[][] rows = new[2, 3]
    return 0
}
